--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <footer>
         <!-- Aquí puedes agregar tu pie de página -->
-        <p>Pie de página de la página web</p>
+        <p>Pie</p>
     </footer>
 </body>
 </html>
