servicios casi completos

--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
             <p>Descubre aquí los servicios que ofrecemos.</p>
             <ul>
                 <li><a href="calculadora.html">Calculadora</a></li>
-                <li>Servicio 2</li>
+                <li><a href="App-de-tareas.html">App de Tareas</a></li>
                 <li>Servicio 3</li>
             </ul>
         </div>
