--- a/about.html
+++ b/about.html
@@ -96,15 +96,15 @@
         <h2>Galería de Fotos</h2>
 
         <div class="gallery">
-            <img src="/fotos/calendario.png" alt="Imagen 1">
-            <img src="/fotos/epochhoyy.png" alt="Imagen 2">
-            <img src="/fotos/SIRENA.png" alt="Imagen 3">
-            <img src="/fotos/daniel_6.png" alt="Imagen 4">
-            <img src="/fotos/JEREMIAS2_4.png" alt="Imagen 5">
-            <img src="/fotos/DALILA2_26.png" alt="Imagen 6">
-            <img src="/fotos/Fanny_22.png" alt="Imagen 7">
-            <img src="/fotos/IMG_20210114_192010_468.jpg" alt="">
-            <img src="/fotos/DALL·E 2023-01-09 00.44.14 - Digital art, very dangerous rain forest at dawn while raining, weird orb lights and plants.png" alt="">
+            <img src="calendario.png" alt="Imagen 1">
+            <img src="epochhoyy.png" alt="Imagen 2">
+            <img src="SIRENA.png" alt="Imagen 3">
+            <img src="daniel_6.png" alt="Imagen 4">
+            <img src="JEREMIAS2_4.png" alt="Imagen 5">
+            <img src="DALILA2_26.png" alt="Imagen 6">
+            <img src="Fanny_22.png" alt="Imagen 7">
+            <img src="IMG_20210114_192010_468.jpg" alt="">
+            <img src="DALL·E 2023-01-09 00.44.14 - Digital art, very dangerous rain forest at dawn while raining, weird orb lights and plants.png" alt="">
         </div>
     </main>
 
