cambio audio pagina principal

--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
         <h2>Contenido Principal</h2>
         <p>¡Bienvenido a mi página web!</p>
         
+
         <div id="gifContainer">
             <audio id="audio" src="/peppino-scream_oYaUb09.mp3"></audio>
 
             <img id="gif" src="tumblr_895a918373adcb324eed736156585391_c4b2730c_400.gif" alt="Gif inicial" onclick="changeGif()">
 
         </div>
-      </main>
+    </main>
     
     <footer>
         <!-- Aquí puedes agregar tu pie de página -->
@@ -140,41 +141,40 @@
     </footer>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-  // Resto del código
+            // Resto del código
 
-  // Cargar el archivo de audio
-  let audio = new Audio("ruta/al/archivo.mp3");
-  audio.load();
+            // Cargar el archivo de audio
+            let audio = new Audio("peppino-scream_oYaUb09.mp3");
+            audio.load();
 
-  // Resto del código
-});
-  
-  let gifs = [
-    "tumblr_895a918373adcb324eed736156585391_c4b2730c_400.gif",
-    "tumblr_29e8b358b23e3f5acca3efe237cd082b_ec564d54_400.gif",
-    "Spr_tv_tumble_0.gif",
-    "Spr_tv_ghost_0.gif",
-    "Spr_tv_firemouth_0.gif",
-    "Spr_tv_cheeseball_0.gif",
-    "Spr_tv_barrel_0.gif",
-    "pizza-tower-peppino-spaghetti.gif",
-    "mr-peppino-tv-hud-knight-pizza-tower-gif.gif",
-    "edvsn0j4sdqa1.gif",
-    "Peppinofireassnewhud.gif",
-  ];
-  
-  let gifIndex = 0;
-  
-  function changeGif() {
-    let gif = document.getElementById("gif");
-    gifIndex = (gifIndex + 1) % gifs.length;
-    gif.src = gifs[gifIndex];
-  
-    audio.play(); // Reproducir el audio previamente cargado
-  }
-  
-  const gif = document.getElementById("gif");
+            // Resto del código
+        });
 
+        let gifs = [
+            "tumblr_895a918373adcb324eed736156585391_c4b2730c_400.gif",
+            "tumblr_29e8b358b23e3f5acca3efe237cd082b_ec564d54_400.gif",
+            "Spr_tv_tumble_0.gif",
+            "Spr_tv_ghost_0.gif",
+            "Spr_tv_firemouth_0.gif",
+            "Spr_tv_cheeseball_0.gif",
+            "Spr_tv_barrel_0.gif",
+            "pizza-tower-peppino-spaghetti.gif",
+            "mr-peppino-tv-hud-knight-pizza-tower-gif.gif",
+            "edvsn0j4sdqa1.gif",
+            "Peppinofireassnewhud.gif",
+        ];
+
+        let gifIndex = 0;
+
+        function changeGif() {
+            let gif = document.getElementById("gif");
+            gifIndex = (gifIndex + 1) % gifs.length;
+            gif.src = gifs[gifIndex];
+
+            let audio = document.getElementById("audio");
+            audio.currentTime = 0.1;
+            audio.play();
+        }
     </script>
 </body>
 </html>
