--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
         </form>
 
         <div id="isaac">
-            <audio id="audio" src="/LISA： The Painful OST - Shardy's Shanty.mp3"></audio>
+            <audio id="audio" src="LISA： The Painful OST - Shardy's Shanty.mp3"></audio>
           
             <img id="image" src="Screenshot_6.png" alt="Imagen inicial">
           
