--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,20 +52,19 @@
         }
 
         .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 10px;
         }
 
         .gallery img {
-            max-width: 400px;
+            width: 100%;
             height: auto;
             transition: transform 0.5s;
         }
 
         .gallery img:hover {
-            transform: scale(1.4);
+            transform: scale(1.3);
         }
 
         footer {
@@ -79,7 +77,6 @@
 </head>
 <body>
     <header>
-        <!-- Aquí puedes agregar tu encabezado -->
         <nav class="navbar" role="navigation">
             <a href="index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
@@ -92,7 +89,6 @@
     </header>
 
     <main>
-        <!-- Contenido de la página "About" -->
         <h2>Galería de Fotos</h2>
 
         <div class="gallery">
@@ -103,13 +99,12 @@
             <img src="JEREMIAS2_4.png" alt="Imagen 5">
             <img src="DALILA2_26.png" alt="Imagen 6">
             <img src="Fanny_22.png" alt="Imagen 7">
-            <img src="IMG_20210114_192010_468.jpg" alt="">
-            <img src="DALL·E 2023-01-09 00.44.14 - Digital art, very dangerous rain forest at dawn while raining, weird orb lights and plants.png" alt="">
+            <img src="IMG_20210114_192010_468.jpg" alt="Imagen 8">
+            <img src="DALL·E 2023-01-09 00.44.14 - Digital art, very dangerous rain forest at dawn while raining, weird orb lights and plants.png" alt="Imagen 9">
         </div>
     </main>
 
     <footer>
-        <!-- Aquí puedes agregar tu pie de página -->
         <p>Pie de página de la página web</p>
     </footer>
 </body>
