--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
             left: 0;
             width: 100%;
         }
+
+        #gifContainer {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #gif {
+            width: 100%;
+            max-width: 400px;
+            height: auto;
+        }
     </style>
     <script src="script.js"></script>
 </head>
