Arreglo redireccionamiento en todos los servicios, ruta: ../../ejemplo.html

--- a/servicios/tareas/app-de-tareas.html
+++ b/servicios/tareas/app-de-tareas.html
@@ -108,17 +108,17 @@
   </style>
 </head>
 <body>
-    <header>
-      <nav class="navbar" role="navigation">
-        <a href="/index.html" class="brand">Mi página web</a>
+  <header>
+    <nav class="navbar" role="navigation">
+        <a href="../../index.html" class="brand">Mi página web</a>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../about.html">About</a></li>
+            <li><a href="../../services.html">Services</a></li>
+            <li><a href="../../contact.html">Contact</a></li>
         </ul>
     </nav>
-    </header>
+</header>
     
     <main>
         <h1>App de Tareas</h1>
