--- a/servicios/texto/app-de-texto.html
+++ b/servicios/texto/app-de-texto.html
@@ -111,12 +111,12 @@
 <body>
     <header>
         <nav class="navbar" role="navigation">
-            <a href="/index.html" class="brand">Mi página web</a>
+            <a href="../../index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/services.html">Services</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../about.html">About</a></li>
+                <li><a href="../../services.html">Services</a></li>
+                <li><a href="../../contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
