Cambie shardys de mp3 a ogg

--- a/contact.html
+++ b/contact.html
@@ -235,7 +235,7 @@
             <div id="message" class="message"></div> <!-- Elemento para mostrar el mensaje -->
         </form>
         <div id="isaac">
-          <audio id="audio" src="LISA： The Painful OST - Shardy's Shanty.mp3"></audio>
+          <audio id="audio" src="LISA：-The-Painful-OST-Shardy_s-Shanty.ogg"></audio>
           <img id="image" src="Screenshot_6.png" alt="Imagen inicial">
           <img id="gif" src="isaac.gif" alt="Gif de Isaac">
       </div>
