--- a/index.html
+++ b/index.html
@@ -4,133 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página Web</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #333;
-            color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-        }
-
-        nav .brand {
-            font-size: 20px;
-            font-weight: bold;
-            color: #fff;
-            text-decoration: none;
-        }
-
-        nav .nav-links {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-        }
-
-        nav .nav-links li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        .container-nav {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .container-nav h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .container-nav p {
-            margin-bottom: 20px;
-        }
-
-        .container-nav input[type="text"] {
-            padding: 5px;
-            font-size: 16px;
-            margin-right: 10px;
-        }
-
-        .container-nav .button-group {
-            display: flex;
-            gap: 10px;
-            margin-top: 10px;
-        }
-
-        .container-nav button {
-            padding: 5px 10px;
-            font-size: 16px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .container .row {
-            display: flex;
-            gap: 10px;
-        }
-
-        .container .row .column {
-            flex: 1;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-        }
-
-        #gifContainer {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #gif {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-        }
-    </style>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="/index/index.css">
 </head>
 <body>
     <header>
         <nav class="navbar" role="navigation">
             <a href="index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about/about.html">About</a></li>
+                <li><a href="/servicios/services.html">Services</a></li>
+                <li><a href="/contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -141,9 +25,9 @@
         
 
         <div id="gifContainer">
-            <audio id="audio" src="peppino-scream_oYaUb09.mp3"></audio>
+            <audio id="audio" src="XpepinoGrito.ogg"></audio>
 
-            <img id="gif" src="tumblr_895a918373adcb324eed736156585391_c4b2730c_400.gif" alt="Gif inicial" onclick="changeGif()">
+            <img id="gif" src="Ypepino1.gif" alt="Gif inicial" onclick="changeGif()">
 
         </div>
     </main>
@@ -152,42 +36,6 @@
         <!-- Aquí puedes agregar tu pie de página -->
         <p>Pie de página</p>
     </footer>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Resto del código
-
-            // Cargar el archivo de audio
-            var audio = new Audio("peppino-scream_oYaUb09.mp3");
-            audio.load();
-
-            // Resto del código
-        });
-
-        var gifs = [
-            "tumblr_895a918373adcb324eed736156585391_c4b2730c_400.gif",
-            "tumblr_29e8b358b23e3f5acca3efe237cd082b_ec564d54_400.gif",
-            "Spr_tv_tumble_0.gif",
-            "Spr_tv_ghost_0.gif",
-            "Spr_tv_firemouth_0.gif",
-            "Spr_tv_cheeseball_0.gif",
-            "Spr_tv_barrel_0.gif",
-            "pizza-tower-peppino-spaghetti.gif",
-            "mr-peppino-tv-hud-knight-pizza-tower-gif.gif",
-            "edvsn0j4sdqa1.gif",
-            "Peppinofireassnewhud.gif",
-        ];
-
-        var gifIndex = 0;
-
-        function changeGif() {
-            var gif = document.getElementById("gif");
-            gifIndex = (gifIndex + 1) % gifs.length;
-            gif.src = gifs[gifIndex];
-
-            var audio = document.getElementById("audio");
-            audio.currentTime = 0.1;
-            audio.play();
-        }
-    </script>
+    <script src="/index/index.js"></script>
 </body>
 </html>
