--- a/servicios/services.html
+++ b/servicios/services.html
@@ -114,11 +114,10 @@ footer {
         <nav class="navbar" role="navigation">
             <a href="index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="/about/about.html">About</a></li>
+              <li><a href="/servicios/services.html">Services</a></li>
+              <li><a href="/contact/contact.html">Contact</a></li>
         </nav>
     </header>
     
@@ -127,9 +126,9 @@ footer {
             <h1>Nuestros servicios</h1>
             <p>Descubre aquí los servicios que ofrecemos.</p>
             <ul>
-                <li><a href="./servicios/calculadora/calculadora.html">Calculadora</a></li>
-                <li><a href="./servicios/tareas/app-de-tareas.html">App de Tareas</a></li>
-                <li><a href="./servicios/texto/app-de-texto.html">App de Texto</a></li>
+                <li><a href="/servicios/calculadora/calculadora.html">Calculadora</a></li>
+                <li><a href="/servicios/tareas/app-de-tareas.html">App de Tareas</a></li>
+                <li><a href="/servicios/texto/app-de-texto.html">App de Texto</a></li>
             </ul>
         </div>
         
