--- a/servicios/tareas/app-de-tareas.html
+++ b/servicios/tareas/app-de-tareas.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App de Tareas</title>
-    <link rel="stylesheet" href="/servicios/tareas/tareas.css">
+    <link rel="stylesheet" href="/servicios/tareas/tareas.css/">
 </head>
 <body>
   <header>
     <nav class="navbar" role="navigation">
-        <a href="../../index.html" class="brand">Mi página web</a>
+        <a href="../../index.html/" class="brand">Mi página web</a>
         <ul class="nav-links">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/about/about.html">About</a></li>
-          <li><a href="/servicios/services.html">Services</a></li>
-          <li><a href="/contact/contact.html">Contact</a></li>
+            <nav class="navbar" role="navigation">
+                <a href="/index.html/" class="brand">Mi página web</a>
+                <ul class="nav-links">
+                    <li><a href="/index.html/">Home</a></li>
+                    <li><a href="/about/about.html/">About</a></li>
+                    <li><a href="/servicios/services.html/">Services</a></li>
+                    <li><a href="/contact/contact.html/">Contact</a></li>
+                </ul>
+            </nav>
         </ul>
     </nav>
   </header>
@@ -70,6 +75,6 @@
         <p>Pie de página</p>
     </footer>
 
-    <script src="/servicios/tareas/funcionesDeTareas.js"></script>
+    <script src="/servicios/tareas/funcionesDeTareas.js/"></script>
 </body>
 </html>
