--- a/servicios/texto/app-de-texto.html
+++ b/servicios/texto/app-de-texto.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App de Texto</title>
-    <link rel="stylesheet" href="/servicios/texto/texto.css">
+    <link rel="stylesheet" href="/servicios/texto/texto.css/">
 </head>
 <body>
     <header>
         <nav class="navbar" role="navigation">
             <a href="../../index.html" class="brand">Mi página web</a>
-            <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/about/about.html">About</a></li>
-                <li><a href="/servicios/services.html">Services</a></li>
-                <li><a href="/contact/contact.html">Contact</a></li>
-            </ul>
+            <nav class="navbar" role="navigation">
+                <a href="/index.html/" class="brand">Mi página web</a>
+                <ul class="nav-links">
+                    <li><a href="/index.html/">Home</a></li>
+                    <li><a href="/about/about.html/">About</a></li>
+                    <li><a href="/servicios/services.html/">Services</a></li>
+                    <li><a href="/contact/contact.html/">Contact</a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
     
@@ -53,6 +56,6 @@
         <p>Pie de página de la página web</p>
     </footer>
     
-    <script src="/servicios/texto/texto.js"></script>
+    <script src="/servicios/texto/texto.js/"></script>
 </body>
 </html>
