--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página Web</title>
-    <link rel="stylesheet" href="/index/index.css">
+    <link rel="stylesheet" href="index/index.css">
 </head>
 <body>
     <header>
         <nav class="navbar" role="navigation">
             <a href="index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/about/about.html">About</a></li>
-                <li><a href="/servicios/services.html">Services</a></li>
-                <li><a href="/contact/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about/about.html">About</a></li>
+                <li><a href="servicios/services.html">Services</a></li>
+                <li><a href="contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -36,6 +36,6 @@
         <!-- Aquí puedes agregar tu pie de página -->
         <p>Pie de página</p>
     </footer>
-    <script src="/index/index.js"></script>
+    <script src="index/index.js"></script>
 </body>
 </html>
