puede que finalmente haya solucionado las carpetas

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         
 
         <div id="gifContainer">
-            <audio id="audio" src="XpepinoGrito.ogg"></audio>
+            <audio id="audio" src="ogg/XpepinoGrito.ogg"></audio>
 
-            <img id="gif" src="Ypepino1.gif" alt="Gif inicial" onclick="changeGif()">
+            <img id="gif" src="gif/Ypepino1.gif" alt="Gif inicial" onclick="changeGif()">
 
         </div>
     </main>
