--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <!-- Aquí puedes agregar tu pie de página -->
         <p>Pie de página</p>
     </footer>
-    <script src="../index/index.js"></script>
+    <script src="index/index.js"></script>
 </body>
 </html>
