la concha de la lora

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -34,9 +34,9 @@
       <div id="message" class="message"></div> <!-- Elemento para mostrar el mensaje -->
     </form>
     <div id="isaac">
-      <audio id="audio" src="/Xshardy.ogg" loop></audio>
-      <img id="image" src="/Zblanco.png" alt="Imagen inicial">
-      <img id="gif" src="/Yisaac.gif" alt="Gif de Isaac">
+      <audio id="audio" src="ogg/Xshardy.ogg" loop></audio>
+      <img id="image" src="png/Zblanco.png" alt="Imagen inicial">
+      <img id="gif" src="gif/Yisaac.gif" alt="Gif de Isaac">
     </div>
   </main>
 
