--- a/about/about.html
+++ b/about/about.html
@@ -24,15 +24,15 @@
         <h2>Galería de Fotos</h2>
 
         <div class="gallery">
-            <img src="/Zdibujo-calendario.png" alt="Imagen 1">
-            <img src="/Zdibujo-dalila.png" alt="Imagen 2">
-            <img src="/Zdibujo-daniel.png" alt="Imagen 3">
-            <img src="/Zdibujo-fanny.png" alt="Imagen 4">
-            <img src="/Zdibujo-hoy.png" alt="Imagen 5">
-            <img src="/Zdibujo-jeremias.png" alt="Imagen 6">
-            <img src="/Zdibujo-myafisi.png" alt="Imagen 7">
-            <img src="/Zdibujo-sirena.png" alt="Imagen 8">
-            <img src="/Zdibujo-vicentina.jpg" alt="Imagen 9">
+            <img src="png/Zdibujo-calendario.png" alt="Imagen 1">
+            <img src="png/Zdibujo-dalila.png" alt="Imagen 2">
+            <img src="png/Zdibujo-daniel.png" alt="Imagen 3">
+            <img src="png/Zdibujo-fanny.png" alt="Imagen 4">
+            <img src="png/Zdibujo-hoy.png" alt="Imagen 5">
+            <img src="png/Zdibujo-jeremias.png" alt="Imagen 6">
+            <img src="png/Zdibujo-myafisi.png" alt="Imagen 7">
+            <img src="png/Zdibujo-sirena.png" alt="Imagen 8">
+            <img src="png/Zdibujo-vicentina.jpg" alt="Imagen 9">
         </div>
     </main>
     <footer>
