--- a/about/about.html
+++ b/about/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
-    <script src="about.js"></script>
+    <link rel="stylesheet" href="../about/about.css">
+    <script src="../about/about.js"></script>
 </head>
 <body>
     <header>
         <nav class="navbar" role="navigation">
-            <a href="index.html" class="brand">Mi página web</a>
+            <a href="../index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about/about.html">About</a></li>
-                <li><a href="servicios/services.html">Services</a></li>
-                <li><a href="contact/contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="../servicios/services.html">Services</a></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,15 +24,15 @@
         <h2>Galería de Fotos</h2>
 
         <div class="gallery">
-            <img src="png/Zdibujo-calendario.png" alt="Imagen 1">
-            <img src="png/Zdibujo-dalila.png" alt="Imagen 2">
-            <img src="png/Zdibujo-daniel.png" alt="Imagen 3">
-            <img src="png/Zdibujo-fanny.png" alt="Imagen 4">
-            <img src="png/Zdibujo-hoy.png" alt="Imagen 5">
-            <img src="png/Zdibujo-jeremias.png" alt="Imagen 6">
-            <img src="png/Zdibujo-myafisi.png" alt="Imagen 7">
-            <img src="png/Zdibujo-sirena.png" alt="Imagen 8">
-            <img src="png/Zdibujo-vicentina.jpg" alt="Imagen 9">
+            <img src="../png/Zdibujo-calendario.png" alt="Imagen 1">
+            <img src="../png/Zdibujo-dalila.png" alt="Imagen 2">
+            <img src="../png/Zdibujo-daniel.png" alt="Imagen 3">
+            <img src="../png/Zdibujo-fanny.png" alt="Imagen 4">
+            <img src="../png/Zdibujo-hoy.png" alt="Imagen 5">
+            <img src="../png/Zdibujo-jeremias.png" alt="Imagen 6">
+            <img src="../png/Zdibujo-myafisi.png" alt="Imagen 7">
+            <img src="../png/Zdibujo-sirena.png" alt="Imagen 8">
+            <img src="../png/Zdibujo-vicentina.jpg" alt="Imagen 9">
         </div>
     </main>
     <footer>
