--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,12 +12,12 @@
 <body>
   <header>
     <nav class="navbar" role="navigation">
-      <a href="index.html" class="brand">Mi página web</a>
+      <a href="../index.html" class="brand">Mi página web</a>
       <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about/about.html">About</a></li>
-          <li><a href="servicios/services.html">Services</a></li>
-          <li><a href="contact/contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about/about.html">About</a></li>
+          <li><a href="../servicios/services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
       </ul>
   </nav>
   </header>
@@ -34,9 +34,9 @@
       <div id="message" class="message"></div> <!-- Elemento para mostrar el mensaje -->
     </form>
     <div id="isaac">
-      <audio id="audio" src="ogg/Xshardy.ogg" loop></audio>
-      <img id="image" src="png/Zblanco.png" alt="Imagen inicial">
-      <img id="gif" src="gif/Yisaac.gif" alt="Gif de Isaac">
+      <audio id="audio" src="../ogg/Xshardy.ogg" loop></audio>
+      <img id="image" src="../png/Zblanco.png" alt="Imagen inicial">
+      <img id="gif" src="../gif/Yisaac.gif" alt="Gif de Isaac">
     </div>
   </main>
 
