--- a/servicios/calculadora/calculadora.html
+++ b/servicios/calculadora/calculadora.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="/servicios/calculadora/calculadora.css">
+    <link rel="stylesheet" href="calculadora.css">
 </head>
 <body>
     <header>
         <nav class="navbar" role="navigation">
-            <a href="index.html" class="brand">Mi página web</a>
+            <a href="../index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about/about.html">About</a></li>
-                <li><a href="servicios/services.html">Services</a></li>
-                <li><a href="contact/contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../about/about.html">About</a></li>
+                <li><a href="../servicios/services.html">Services</a></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
