--- a/pruebas/pruebas.html
+++ b/pruebas/pruebas.html
@@ -22,17 +22,17 @@
       <a href="categoria2.html">Carruseles de Imágenes 2</a>
       <ul>
         <li><a href="/pruebas/2- Carruseles de imágenes/primer carrusel, automatico/1.html">Primer carrusel</a></li>
-        <li><a href="/pruebas/2- Carruseles de imágenes/segundo carrusel, animado/1.html">Carrusel animado</a></li>
-        <li><a href="elemento3.html">Elemento 3</a></li>
-        <li><a href="elemento4.html">Elemento 4</a></li>
+        <li><a href="/pruebas/2- Carruseles de imágenes/segundo carrusel, animado/1.html">Owl carrusel, basico</a></li>
+        <li><a href="/pruebas/2- Carruseles de imágenes/tercer carrusel, animado/1.html">Owl carrusel, mas complejo</a></li>
+        <li><a href="/pruebas/2- Carruseles de imágenes/cuarto carrusel, maximo/1.html">Owl carrusel en su maximo explendor</a></li>
       </ul>
     </li>
     <li>
-      <a href="categoria3.html">Animaciones y Transiciones</a>
+      <a href="categoria3.html">Plugins utiles</a>
       <ul>
-        <li><a href="elemento1.html">Elemento 1</a></li>
-        <li><a href="elemento2.html">Elemento 2</a></li>
-        <li><a href="elemento3.html">Elemento 3</a></li>
+        <li><a href="/pruebas/3- Plugins varios/Animate On Scroll/1.html">Animate On Scroll</a></li>
+        <li><a href="/pruebas/3- Plugins varios/fullPage/1.html">fullPage</a></li>
+        <li><a href="/pruebas/3- Plugins varios/magicScroll+GSAP/1.html">MagicScroll + GSAP</a></li>
         <li><a href="elemento4.html">Elemento 4</a></li>
       </ul>
     </li>
