--- a/pruebas/pruebas.html
+++ b/pruebas/pruebas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mi Directorio</title>
-  <link rel="stylesheet" href="/pruebas/styles.css">
+  <link rel="stylesheet" href="./pruebas/styles.css">
 
 </head>
 <body>
@@ -12,27 +12,27 @@
     <li>
       <a href="categoria1.html">Menú Desplegable</a>
       <ul>
-        <li><a href="/pruebas/1- Menús desplegables/menu animado/2.html">Menu animado</a></li>
-        <li><a href="/pruebas/1- Menús desplegables/menu despegable simple/menuDespegable.html">Menu despegable</a></li>
-        <li><a href="/pruebas/1- Menús desplegables/Menú desplegable de múltiples niveles/1.html">Multiples niveles</a></li>
+        <li><a href="./pruebas/1- Menús desplegables/menu animado/2.html">Menu animado</a></li>
+        <li><a href="./pruebas/1- Menús desplegables/menu despegable simple/menuDespegable.html">Menu despegable</a></li>
+        <li><a href="./pruebas/1- Menús desplegables/Menú desplegable de múltiples niveles/1.html">Multiples niveles</a></li>
         <li><a href="elemento4.html">Elemento 4</a></li>
       </ul>
     </li>
     <li>
       <a href="categoria2.html">Carruseles de Imágenes 2</a>
       <ul>
-        <li><a href="/pruebas/2- Carruseles de imágenes/primer carrusel, automatico/1.html">Primer carrusel</a></li>
-        <li><a href="/pruebas/2- Carruseles de imágenes/segundo carrusel, animado/1.html">Owl carrusel, basico</a></li>
-        <li><a href="/pruebas/2- Carruseles de imágenes/tercer carrusel, animado/1.html">Owl carrusel, mas complejo</a></li>
-        <li><a href="/pruebas/2- Carruseles de imágenes/cuarto carrusel, maximo/1.html">Owl carrusel en su maximo explendor</a></li>
+        <li><a href="./pruebas/2- Carruseles de imágenes/primer carrusel, automatico/1.html">Primer carrusel</a></li>
+        <li><a href="./pruebas/2- Carruseles de imágenes/segundo carrusel, animado/1.html">Owl carrusel, basico</a></li>
+        <li><a href="./pruebas/2- Carruseles de imágenes/tercer carrusel, animado/1.html">Owl carrusel, mas complejo</a></li>
+        <li><a href="./pruebas/2- Carruseles de imágenes/cuarto carrusel, maximo/1.html">Owl carrusel en su maximo explendor</a></li>
       </ul>
     </li>
     <li>
       <a href="categoria3.html">Plugins utiles</a>
       <ul>
-        <li><a href="/pruebas/3- Plugins varios/Animate On Scroll/1.html">Animate On Scroll</a></li>
-        <li><a href="/pruebas/3- Plugins varios/fullPage/1.html">fullPage</a></li>
-        <li><a href="/pruebas/3- Plugins varios/magicScroll+GSAP/1.html">MagicScroll + GSAP</a></li>
+        <li><a href="./pruebas/3- Plugins varios/Animate On Scroll/1.html">Animate On Scroll</a></li>
+        <li><a href="./pruebas/3- Plugins varios/fullPage/1.html">fullPage</a></li>
+        <li><a href="./pruebas/3- Plugins varios/magicScroll+GSAP/1.html">MagicScroll + GSAP</a></li>
         <li><a href="elemento4.html">Elemento 4</a></li>
       </ul>
     </li>
